--- a/jflex/src/main/resources/jflex/Messages.properties
+++ b/jflex/src/main/resources/jflex/Messages.properties
@@ -77,8 +77,8 @@ UNSUPPORTED_UNICODE_VERSION_SUPPORTED_ARE=Unsupported Unicode version - supporte
 INVALID_UNICODE_PROPERTY=Invalid Unicode property
 DOT_BAR_NEWLINE_DOES_NOT_MATCH_ALL_CHARS=".|\\n" does not match all characters, because "." excludes all Unicode newline chars - use "[^]" instead
 PROPS_ARG_REQUIRES_UNICODE_VERSION=The --uniprops option requires a Unicode version argument - supported versions: {0}
-!! TODO: Fix this message in JFlex 1.6 to note that the InputStream ctor will go away entirely in the next version.
-EMITTING_INPUTSTREAM_CTOR=Emitting deprecated InputStream constructor. In JFlex 1.6, the default will be to NOT emit this constructor. The inputstreamctor option will cause this constructor to be emitted in JFlex 1.5 and 1.6; the version after 1.6 will never emit this constructor.
+!! TODO: The InputStream ctor will go away entirely in the next version after JFlex 1.6.
+EMITTING_INPUTSTREAM_CTOR=Emitting deprecated InputStream constructor. The inputstreamctor option will cause this constructor to be emitted in JFlex 1.6; the version after 1.6 will never emit this constructor.
 SWITCH_METHOD_DEPRECATED=The 'switch' code generation method is deprecated and will be removed in JFlex 1.6.
 TABLE_METHOD_DEPRECATED=The 'table' code generation method is deprecated and will be removed in JFlex 1.6.
 IMPOSSIBLE_CHARCLASS_RANGE = Impossible character class range (end is less than start)
