Remove out-of-place backslash
svn-rev: trunk@834

--- a/tex/manual.tex
+++ b/tex/manual.tex
@@ -484,7 +484,7 @@ in which we will store parts of string literals and two helper functions
 with position information of the current token (see section \ref{CUPWork}
 \htmlref{\emph{JFlex and CUP}}{CUPWork} 
 for how to interface with the parser generator CUP). As JFlex options, both 
-\verb+%{+ and \verb+\%}+ must begin a line. 
+\verb+%{+ and \verb+%}+ must begin a line. 
 \label{ExampleMacros}
 
 The specification continues with macro declarations. Macros are
