New \u{...} escape sequence allows code points (and whitespace-separated sequences of code points) to be specified as 1-6 hexadecimal digit values.
svn-rev: trunk@838

--- a/jflex/src/main/resources/jflex/Messages.properties
+++ b/jflex/src/main/resources/jflex/Messages.properties
@@ -82,3 +82,4 @@ EMITTING_INPUTSTREAM_CTOR=Emitting deprecated InputStream constructor. The input
 SWITCH_METHOD_DEPRECATED=The 'switch' code generation method is deprecated and will be removed in JFlex 1.6.
 TABLE_METHOD_DEPRECATED=The 'table' code generation method is deprecated and will be removed in JFlex 1.6.
 IMPOSSIBLE_CHARCLASS_RANGE = Impossible character class range (end is less than start)
+CODEPOINT_OUT_OF_RANGE = Hexadecimal code point is greater than the maximum allowed code point
